kubernetes-manifests/asset.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset
spec:
  selector:
    matchLabels:
      app: asset
  template:
    metadata:
      labels:
        app: asset
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: hme000/hme1:asset
        ports:
        - name: grpc
          containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
#        resources:
#          requests:
#            cpu: 100m
#            memory: 64Mi
#          limits:
#            cpu: 200m
#            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: assetcreation
spec:
  type: ClusterIP
  selector:
    app: asset
  ports:
  - name: grpc
    port: 1236
    targetPort: 50051
