kubernetes-manifests/db_server.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db_server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db_server
  template:
    metadata:
      labels:
        app: db_server
    spec:
      containers:
        - name: server
          image: hme000/hme1:db_server
          ports:
          - name: http
            containerPort: 8001
          readinessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8001"]
          livenessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8001"]
#          env:
#          - name: PORT
#            value: "8001"
#          - name: DB_SERVER_SERVICE_ADDR
#            value: "db_server:8001"
#          resources:
#            requests:
#              cpu: 100m
#              memory: 64Mi
#            limits:
#              cpu: 200m
#              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: db_server
spec:
  type: ClusterIP
  selector:
    app: db_server
  ports:
  - name: http
    port: 1235
    targetPort: 8001
---
